# CoffeeRobot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: backlog.xlsx  concept_model.puml  sequences.puml  use_case.puml  КТС (Архитектура ИС).pptx
src/: camera.cpp  camera.h  dispenser.cpp  dispenser.h  main.cpp  main.py  processState.py  processor.cpp  processor.h  recognition.py  robot.cpp  robot.h  sendCMD.py  server.cpp  server.h
